cluster/apps/download/sonarr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: download
  labels:
    app: sonarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8989
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 8989
          livenessProbe:
            httpGet:
              path: /ping
              port: 8989
          resources:
            requests:
              cpu: 100m
              memory: 128M
            limits:
              cpu: 4
              memory: 4Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: config-file
              mountPath: /config/config.xml
              subPath: config.xml
              readOnly: true
            - name: download
              mountPath: /download
            - name: media
              mountPath: /media
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: config-file
          secret:
            secretName: sonarr-config
            items:
              - key: config.xml
                path: config.xml
        - name: download
          persistentVolumeClaim:
            claimName: sonarr-download
        - name: media
          persistentVolumeClaim:
            claimName: sonarr-media
